--- a/index.html
+++ b/index.html
@@ -432,7 +432,9 @@
                         
                     </label>
                     <button type="submit" class="footer-form-btn">Подписаться</button>
-                    <svg class="href"></svg>
+                    <svg class="footer-form-icon">
+                        <use href="./img/icons.svg/sprite.svg#icon-send"></use>
+                    </svg>
                     
 
                     </button>
